--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,4 +47,4 @@ jobs:
         with:
           command: cves
           image: ${{ steps.meta.outputs.tags }}
-          exit-code: true
+          github-token: ${{ secrets.GITHUB_TOKEN }}
