--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,8 +43,7 @@ jobs:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PAT }}
 
-      - uses: docker/scout-action@dd36f5b0295baffa006aa6623371f226cc03e506
+      - uses: docker/scout-action@v1.0.9
         with:
           command: cves
           image: ${{ steps.meta.outputs.tags }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
