--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
       - uses: docker/metadata-action@v4.4.0
         id: meta
         with:
+          images: my/app
           tags: |
             type=semver,pattern={{version}}
             type=raw,value=latest
@@ -45,4 +46,3 @@ jobs:
       - uses: docker/scout-action@v1.0.9
         with:
           command: cves
-          image: ${{ steps.meta.outputs.tags }}
