--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ on:
 
 env:
   REGISTRY: docker.io
+  TAG: "my/app:latest"
 
 jobs:
   build:
@@ -18,20 +19,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2.5.0
-
-      - uses: docker/metadata-action@v4.4.0
-        id: meta
-        with:
-          images: my/app
-          tags: |
-            type=semver,pattern={{version}}
-            type=raw,value=latest
-
       - uses: docker/build-push-action@v4.0.0
-        id: build-and-push
         with:
           context: .
-          tags: ${{ steps.meta.outputs.tags }}
+          push: false
+          tags: ${{ env.TAG }}
 
       # --------------
       # Docker Scout
@@ -46,3 +38,4 @@ jobs:
       - uses: docker/scout-action@v1.0.9
         with:
           command: cves
+          image: ${{ env.TAG }}
