--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,23 +18,30 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: docker/setup-buildx-action@v2.5.0
-      - uses: docker/build-push-action@v4.0.0
-        with:
-          context: .
-          push: false
-          tags: ${{ env.TAG }}
-
-      # --------------
-      # Docker Scout
-      # --------------
-
       - uses: docker/login-action@v2.1.0
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PAT }}
 
+      # --------------
+      # Docker build
+      # --------------
+
+      - uses: docker/setup-buildx-action@v2.5.0
+      - uses: docker/build-push-action@v4.0.0
+        with:
+          context: .
+          push: false
+          tags: ${{ env.TAG }}
+          outputs: type=docker,dest=./myimage.tar
+
+      # --------------
+      # Docker scout
+      # --------------
+
+      - run: |
+          docker load --input ./myimage.tar
       - uses: docker/scout-action@v1.0.9
         with:
           command: cves
